# JrdbDownloader

./: .gitignore  Dockerfile  README.md  cron_job.sh  pyproject.toml  requirements.txt
src/jrdbdownloader/: __init__.py  main.ipynb  main.py
